provaNewline/Calc/Par.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.5).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module Calc.Par
  ( happyError
  , myLexer
  , pEL
  , pListExp
  , pExp
  , pExp1
  , pExp2
  ) where

import Prelude

import qualified Calc.Abs
import Calc.Lex

}

%name pEL EL
%name pListExp ListExp
%name pExp Exp
%name pExp1 Exp1
%name pExp2 Exp2
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '('      { PT _ (TS _ 1) }
  ')'      { PT _ (TS _ 2) }
  '*'      { PT _ (TS _ 3) }
  '+'      { PT _ (TS _ 4) }
  '-'      { PT _ (TS _ 5) }
  '/'      { PT _ (TS _ 6) }
  '\n'     { PT _ (TC $$) }
  L_integ  { PT _ (TI $$)  }

%%

Integer :: { Integer }
Integer  : L_integ  { (read $1) :: Integer }

EL :: { Calc.Abs.EL }
EL : ListExp { Calc.Abs.ExpList $1 }

ListExp :: { [Calc.Abs.Exp] }
ListExp
  : {- empty -} { [] }
  | Exp { (:[]) $1 }
  | Exp '\n' ListExp { (:) $1 $3 }

Exp :: { Calc.Abs.Exp }
Exp
  : Exp '+' Exp1 { Calc.Abs.EAdd $1 $3 }
  | Exp '-' Exp1 { Calc.Abs.ESub $1 $3 }
  | Exp1 { $1 }

Exp1 :: { Calc.Abs.Exp }
Exp1
  : Exp1 '*' Exp2 { Calc.Abs.EMul $1 $3 }
  | Exp1 '/' Exp2 { Calc.Abs.EDiv $1 $3 }
  | Exp2 { $1 }

Exp2 :: { Calc.Abs.Exp }
Exp2 : Integer { Calc.Abs.EInt $1 } | '(' Exp ')' { $2 }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

}
