provaNewline/Calc/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.3 from Calc/Par.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pEL -> EL                                   (0)
	%start_pListExp -> ListExp                         (1)
	%start_pExp -> Exp                                 (2)
	%start_pExp1 -> Exp1                               (3)
	%start_pExp2 -> Exp2                               (4)
	Integer -> L_integ                                 (5)
	EL -> ListExp                                      (6)
	ListExp ->                                         (7)
	ListExp -> Exp                                     (8)
	ListExp -> Exp '\n' ListExp                        (9)
	Exp -> Exp '+' Exp1                                (10)
	Exp -> Exp '-' Exp1                                (11)
	Exp -> Exp1                                        (12)
	Exp1 -> Exp1 '*' Exp2                              (13)
	Exp1 -> Exp1 '/' Exp2                              (14)
	Exp1 -> Exp2                                       (15)
	Exp2 -> Integer                                    (16)
	Exp2 -> '(' Exp ')'                                (17)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	'*'            { PT _ (TS _ 3) }
	'+'            { PT _ (TS _ 4) }
	'-'            { PT _ (TS _ 5) }
	'/'            { PT _ (TS _ 6) }
	'\n'           { PT _ (TC $$) }
	L_integ        { PT _ (TI $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pEL      rule  0
	%start_pListExp rule  1
	%start_pExp     rule  2
	%start_pExp1    rule  3
	%start_pExp2    rule  4
	Integer         rule  5
	EL              rule  6
	ListExp         rules 7, 8, 9
	Exp             rules 10, 11, 12
	Exp1            rules 13, 14, 15
	Exp2            rules 16, 17

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pEL -> . EL                                  (rule 0)

	'('            shift, and enter state 9
	L_integ        shift, and enter state 6
	%eof           reduce using rule 7

	Integer        goto state 7
	EL             goto state 16
	ListExp        goto state 17
	Exp            goto state 15
	Exp1           goto state 13
	Exp2           goto state 11

State 1

	%start_pListExp -> . ListExp                        (rule 1)

	'('            shift, and enter state 9
	L_integ        shift, and enter state 6
	%eof           reduce using rule 7

	Integer        goto state 7
	ListExp        goto state 14
	Exp            goto state 15
	Exp1           goto state 13
	Exp2           goto state 11

State 2

	%start_pExp -> . Exp                                (rule 2)

	'('            shift, and enter state 9
	L_integ        shift, and enter state 6

	Integer        goto state 7
	Exp            goto state 12
	Exp1           goto state 13
	Exp2           goto state 11

State 3

	%start_pExp1 -> . Exp1                              (rule 3)

	'('            shift, and enter state 9
	L_integ        shift, and enter state 6

	Integer        goto state 7
	Exp1           goto state 10
	Exp2           goto state 11

State 4

	%start_pExp2 -> . Exp2                              (rule 4)

	'('            shift, and enter state 9
	L_integ        shift, and enter state 6

	Integer        goto state 7
	Exp2           goto state 8

State 5

	Integer -> . L_integ                                (rule 5)

	L_integ        shift, and enter state 6


State 6

	Integer -> L_integ .                                (rule 5)

	')'            reduce using rule 5
	'*'            reduce using rule 5
	'+'            reduce using rule 5
	'-'            reduce using rule 5
	'/'            reduce using rule 5
	'\n'           reduce using rule 5
	%eof           reduce using rule 5


State 7

	Exp2 -> Integer .                                   (rule 16)

	')'            reduce using rule 16
	'*'            reduce using rule 16
	'+'            reduce using rule 16
	'-'            reduce using rule 16
	'/'            reduce using rule 16
	'\n'           reduce using rule 16
	%eof           reduce using rule 16


State 8

	%start_pExp2 -> Exp2 .                              (rule 4)

	%eof           accept


State 9

	Exp2 -> '(' . Exp ')'                               (rule 17)

	'('            shift, and enter state 9
	L_integ        shift, and enter state 6

	Integer        goto state 7
	Exp            goto state 23
	Exp1           goto state 13
	Exp2           goto state 11

State 10

	%start_pExp1 -> Exp1 .                              (rule 3)
	Exp1 -> Exp1 . '*' Exp2                             (rule 13)
	Exp1 -> Exp1 . '/' Exp2                             (rule 14)

	'*'            shift, and enter state 21
	'/'            shift, and enter state 22
	%eof           accept


State 11

	Exp1 -> Exp2 .                                      (rule 15)

	')'            reduce using rule 15
	'*'            reduce using rule 15
	'+'            reduce using rule 15
	'-'            reduce using rule 15
	'/'            reduce using rule 15
	'\n'           reduce using rule 15
	%eof           reduce using rule 15


State 12

	%start_pExp -> Exp .                                (rule 2)
	Exp -> Exp . '+' Exp1                               (rule 10)
	Exp -> Exp . '-' Exp1                               (rule 11)

	'+'            shift, and enter state 18
	'-'            shift, and enter state 19
	%eof           accept


State 13

	Exp -> Exp1 .                                       (rule 12)
	Exp1 -> Exp1 . '*' Exp2                             (rule 13)
	Exp1 -> Exp1 . '/' Exp2                             (rule 14)

	')'            reduce using rule 12
	'*'            shift, and enter state 21
	'+'            reduce using rule 12
	'-'            reduce using rule 12
	'/'            shift, and enter state 22
	'\n'           reduce using rule 12
	%eof           reduce using rule 12


State 14

	%start_pListExp -> ListExp .                        (rule 1)

	%eof           accept


State 15

	ListExp -> Exp .                                    (rule 8)
	ListExp -> Exp . '\n' ListExp                       (rule 9)
	Exp -> Exp . '+' Exp1                               (rule 10)
	Exp -> Exp . '-' Exp1                               (rule 11)

	'+'            shift, and enter state 18
	'-'            shift, and enter state 19
	'\n'           shift, and enter state 20
	%eof           reduce using rule 8


State 16

	%start_pEL -> EL .                                  (rule 0)

	%eof           accept


State 17

	EL -> ListExp .                                     (rule 6)

	%eof           reduce using rule 6


State 18

	Exp -> Exp '+' . Exp1                               (rule 10)

	'('            shift, and enter state 9
	L_integ        shift, and enter state 6

	Integer        goto state 7
	Exp1           goto state 29
	Exp2           goto state 11

State 19

	Exp -> Exp '-' . Exp1                               (rule 11)

	'('            shift, and enter state 9
	L_integ        shift, and enter state 6

	Integer        goto state 7
	Exp1           goto state 28
	Exp2           goto state 11

State 20

	ListExp -> Exp '\n' . ListExp                       (rule 9)

	'('            shift, and enter state 9
	L_integ        shift, and enter state 6
	%eof           reduce using rule 7

	Integer        goto state 7
	ListExp        goto state 27
	Exp            goto state 15
	Exp1           goto state 13
	Exp2           goto state 11

State 21

	Exp1 -> Exp1 '*' . Exp2                             (rule 13)

	'('            shift, and enter state 9
	L_integ        shift, and enter state 6

	Integer        goto state 7
	Exp2           goto state 26

State 22

	Exp1 -> Exp1 '/' . Exp2                             (rule 14)

	'('            shift, and enter state 9
	L_integ        shift, and enter state 6

	Integer        goto state 7
	Exp2           goto state 25

State 23

	Exp -> Exp . '+' Exp1                               (rule 10)
	Exp -> Exp . '-' Exp1                               (rule 11)
	Exp2 -> '(' Exp . ')'                               (rule 17)

	')'            shift, and enter state 24
	'+'            shift, and enter state 18
	'-'            shift, and enter state 19


State 24

	Exp2 -> '(' Exp ')' .                               (rule 17)

	')'            reduce using rule 17
	'*'            reduce using rule 17
	'+'            reduce using rule 17
	'-'            reduce using rule 17
	'/'            reduce using rule 17
	'\n'           reduce using rule 17
	%eof           reduce using rule 17


State 25

	Exp1 -> Exp1 '/' Exp2 .                             (rule 14)

	')'            reduce using rule 14
	'*'            reduce using rule 14
	'+'            reduce using rule 14
	'-'            reduce using rule 14
	'/'            reduce using rule 14
	'\n'           reduce using rule 14
	%eof           reduce using rule 14


State 26

	Exp1 -> Exp1 '*' Exp2 .                             (rule 13)

	')'            reduce using rule 13
	'*'            reduce using rule 13
	'+'            reduce using rule 13
	'-'            reduce using rule 13
	'/'            reduce using rule 13
	'\n'           reduce using rule 13
	%eof           reduce using rule 13


State 27

	ListExp -> Exp '\n' ListExp .                       (rule 9)

	%eof           reduce using rule 9


State 28

	Exp -> Exp '-' Exp1 .                               (rule 11)
	Exp1 -> Exp1 . '*' Exp2                             (rule 13)
	Exp1 -> Exp1 . '/' Exp2                             (rule 14)

	')'            reduce using rule 11
	'*'            shift, and enter state 21
	'+'            reduce using rule 11
	'-'            reduce using rule 11
	'/'            shift, and enter state 22
	'\n'           reduce using rule 11
	%eof           reduce using rule 11


State 29

	Exp -> Exp '+' Exp1 .                               (rule 10)
	Exp1 -> Exp1 . '*' Exp2                             (rule 13)
	Exp1 -> Exp1 . '/' Exp2                             (rule 14)

	')'            reduce using rule 10
	'*'            shift, and enter state 21
	'+'            reduce using rule 10
	'-'            reduce using rule 10
	'/'            shift, and enter state 22
	'\n'           reduce using rule 10
	%eof           reduce using rule 10


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 18
Number of terminals: 8
Number of non-terminals: 11
Number of states: 30
